// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonUI SNAPSHOTS TESTS gray ButtonUI should not be changed 1`] = `
<button
  class="jsx-1522163952 button button button"
>
  Серая кнопка
</button>
`;

exports[`ButtonUI SNAPSHOTS TESTS lightRed ButtonUI should not be changed 1`] = `
<button
  class="jsx-1931305350 button button button"
>
  Красная кнопка
</button>
`;
